--- a/cognitive_speech/requirements.txt
+++ b/cognitive_speech/requirements.txt
@@ -3,9 +3,12 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
-azure-storage-blob
-azure-search
-azure-search-documents
+azure-ai-formrecognizer      
 azure-cognitiveservices-speech
-azure-common
-azure-core
+azure-common                  
+azure-core                    
+azure-functions               
+azure-identity                
+azure-search                   
+azure-search-documents         
+azure-storage-blob
