--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ openssl-1.1.1u/
 deps.sh
 .python_packages
 .venv
-.vscode
+
 azure-functions-cli/
 SPEECH_LOG.txt
+temp_local.settings.json
+temp_bashrc
